blocks/cards/cards.css
.cards > ul {
  list-style: none;
  margin: 0;
  padding: 0;
  display: grid;
  gap: var(--horizontal-spacing);
  text-transform: lowercase;
}

@media (width >= 600px) {
  .cards > ul {
    grid-template-columns: repeat(auto-fill, minmax(360px, 1fr));
    margin-bottom: 100px;
  }
}

.cards > ul > li {
  display: flex;
  flex-direction: column;
  gap: var(--spacing-xs);
}

.cards .cards-card {
  display: grid;
  gap: var(--horizontal-spacing);
  position: relative;
  border: var(--border-s) solid var(--blue-light);
  border-radius: var(--rounding-m);
  padding: var(--horizontal-spacing);
}

@media (width >= 600px) {
  .cards .cards-card {
    grid-template-columns: 120px 1fr;
  }
}

.cards .cards-card-image {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 120px;
}

.cards .cards-card-image img {
  width: 100%;
  height: 120px;
  object-fit: contain;
}

.cards .cards-card-image .icon svg {
  width: 120px;
  height: 120px;
}

.cards .cards-card-body .icon svg {
  width: 20px;
  height: 20px;
  margin-left: 6px;
}

@media (width >= 600px) {
  .cards .cards-card-image,
  .cards .cards-card-image img {
    height: 150px;
  }
}

.cards .cards-card-price,
.cards .cards-card-badge {
  position: absolute;
  width: max-content;
  max-width: 70px;
  margin: 0;
  border-radius: var(--rounding-s);
  padding: var(--spacing-xs);
  background-color: var(--transparent-white-400);
  font-size: var(--body-size-xxl);
  text-align: center;
}

.cards .cards-card-badge {
  top: var(--rounding-m);
  left: var(--rounding-m);
  background-color: aqua;
}

.cards .cards-card-body :first-child {
  margin-top: 0;
}

.cards .cards-card-body :last-child {
  margin-bottom: 0;
}

@media (width >= 600px) {
  .cards .cards-card-body {
    height: 150px;
    max-height: 150px;
    overflow-y: hidden;
  }

  .cards .cards-card-body h3 ~ p:not([class]) {
    display: -webkit-box;
    -webkit-box-orient: vertical;
    -webkit-line-clamp: 4;
    text-overflow: ellipsis;
    overflow: hidden;
  }
}

/* cart */
.cards form {
  display: flex;
  align-items: center;
  justify-content: space-around;
}

.cards form button {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 44px;
  height: 44px;
  border-radius: 50%;
  padding: 0;
}

.cards form input {
  /* stylelint-disable-next-line property-no-vendor-prefix */
  -moz-appearance: textfield;
  flex: 0 0 33%;
  border: 0;
  padding: 0.5ch 0 0 1.4ch;
  background-color: transparent;
  font-family: var(--heading-font-family);
  font-size: var(--heading-size-m);
  line-height: 0;
  text-align: center;
}

.cards form input:focus {
  color: currentcolor;
}

/* PRICE VARIANT */
.cards.price .cards-card-price {
  top: var(--rounding-m);
  display: grid;
  font-size: var(--body-size-xxl);
  font-weight: bold;
}

.cards.price .cards-card-price .flat-rate {
  font-size: var(--detail-size-xs);
  font-weight: normal;
}

@media (width >= 600px) {
  .cards.price .cards-card {
    grid-template-columns: 1fr;
  }

  .cards.price .cards-card-body {
    height: 80px;
    max-height: 80px;
  }
}

/* CUSTOMIZE VARIANT */
.cards.customize .button.customize {
  display: flex;
  align-items: center;
  justify-content: center;
  min-height: 44px;
  font-family: var(--heading-font-family);
  font-size: var(--heading-size-m);
  line-height: 0;
}

